hphp/hack/test/typecheck/coeffects/clone.php.exp
File "clone.php", line 10, characters 3-10:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "clone.php", line 9, characters 27-32:
  From this declaration, the context of this function body provides the capability string
  File "clone.php", line 4, characters 29-31:
  But the function being called requires the capability int
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
